2013-07-30 Borut Razem <borut.razem AT gmail.com>

	* support/sdbinutils/*: sync with binutils 2.23.2

2013-07-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def,
	  src/stm8/gen.c:
	  Enable peepholes for inverse jumps, and labels, fix label reference counting bug #2183.

2013-07-29 Borut Razem <borut.razem AT gmail.com>

	* support/cpp/sdcpp-diagnostic.c, upport/cpp/sdcpp-opts.c: fixed bug
	  #2194 Missing header file produces error, but still zero exit status

2013-07-27 Leland Morrison <enigmalee AT sourceforge.net>

	* sdas/linksrc/lkrloc3.c:
	  prevent NULL ptr dereference when generating error message
	  (fixes bug #2076 core dump from sdldz80
	   if relative jump exceeds range)

2013-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Enable peephole for jp to jra optimization.

2013-07-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug-927659.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug2084206.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-20020219-1.c,
	  support/regression/tests/gcc-torture-execute-20021118-2.c,
	  support/regression/tests/gcc-torture-execute-20021120-3.c,
	  support/regression/tests/gcc-torture-execute-20030626-1.c,
	  support/regression/tests/gcc-torture-execute-20030626-2.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/gcc-torture-execute-930513-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/gcc-torture-execute-960327-1.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/snprintf.c: